# mat_VC2022_2Dto3D

./: .gitignore  CMakeLists.txt  MATLAB_OpenCV_Matrix_Conversion.md  README.md  README_original.md  USAGE.md  corner_detection.cpp  corner_detection.h  example_usage.cpp  image_resize.cpp  image_resize.h  main.cpp  main_modeling_example.cpp  main_old.cpp  matlab代码.txt  model_viewer.cpp  model_viewer.h  modeling_3d.cpp  modeling_3d.h  mono_calibration.cpp  mono_calibration.h  stereo_calibration.cpp  stereo_calibration.h  stereo_calibration_backup.cpp  stereo_reconstruction.cpp  stereo_reconstruction.h  项目总结.md
MyProject/Calibration_Data/: camera_parameters.txt  corner_points.txt  stereo_calibration.xml
output/: README.md
output/calibration/: opencv_calibration.xml
